<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_depan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026" />

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.052" />

            <TextView
                android:id="@+id/tv_nik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nomor_induk_kependudukan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.117" />

            <EditText
                android:id="@+id/et_nik"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="609dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nik"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="336dp"
                android:layout_marginBottom="590dp"
                android:text="@string/usia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nik"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_usia"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="545dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="306dp"
                android:layout_marginBottom="538dp"
                android:text="@string/jenis_kelamin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_usia"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/tv_alamat"
                android:layout_width="93dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="284dp"
                android:layout_marginBottom="404dp"
                android:text="@string/alamat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_alamat"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="516dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_alamat"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="338dp"
                android:layout_marginBottom="497dp"
                android:text="@string/e_mail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_alamat"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="463dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_asalsekolah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="295dp"
                android:layout_marginBottom="444dp"
                android:text="@string/asal_sekolah"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintVertical_bias="0.05" />

            <EditText
                android:id="@+id/et_asalSekolah"
                android:layout_width="372dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintVertical_bias="0.005" />

            <TextView
                android:id="@+id/tv_kompetensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="218dp"
                android:layout_marginBottom="388dp"
                android:text="@string/kompetensi_yang_dimiliki"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_asalSekolah"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_kompetensi"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="352dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_kompetensi"
                app:layout_constraintVertical_bias="0.0" />


            <Button
                android:id="@+id/button_simpan"
                android:layout_width="370dp"
                android:layout_height="49dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="287dp"
                android:onClick="simpan"
                android:background="@drawable/butoon"
                android:text="@string/simpan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_kompetensi"
                app:layout_constraintVertical_bias="0.0" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="356dp"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_kelamin">

                <RadioButton
                    android:id="@+id/rb_laki"
                    android:layout_width="98dp"
                    android:layout_height="23dp"
                    android:text="@string/laki_laki" />

                <RadioButton
                    android:id="@+id/rb_perempuan"
                    android:layout_width="109dp"
                    android:layout_height="22dp"
                    android:text="@string/perempuan" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



    <LinearLayout
        android:id="@+id/layout_belakang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_margin="24dp"
        android:elevation="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/data_diri"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_hasilNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/tv_hasilNik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nik"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_hasilUsia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usia2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_hasilKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_hasilAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/hasil_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_hasilSekolah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sekolah"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_hasilKompetensi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kompetensi"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:onClick="kembali"
            android:textColor="@color/Purih"
            android:background="@drawable/butoon"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"

            android:textAlignment="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>